--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,7 @@ html,
 body {
   overflow-x: hidden;
   max-width: 100%;
+  overflow-wrap: anywhere;
 }
 
 img,
